# store-ops-auto

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
app/: __init__.py  main.py
app/api/routes/: campaigns.py  dashboard.py
app/core/: config.py
app/database/: connection.py
app/models/: akeneo.py  campaign.py
app/services/: akeneo_service.py  campaign_service.py  database_service.py
app/static/css/: dashboard.css
app/templates/: base.html  dashboard.html  error.html
