[project]
name = "store-ops-auto"
version = "0.1.0"
description = "Automated store operations for campaign management"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "sqlalchemy==2.0.23",
    "pymysql==1.1.0",
    "pandas==2.1.4",
    "openpyxl==3.1.2",
    "requests==2.31.0",
    "python-multipart==0.0.6",
    "jinja2==3.1.2",
    "aiofiles==23.2.1",
    "httpx==0.25.2",
    "schedule==1.2.0",
    "python-dotenv==1.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0"
] 